force-app/main/default/objects/Company_Financial__c/Company_Financial__c.object-meta.xml
<CustomObject>
    <label>Company Financial</label>
    <nameField>
        <label>Company Financial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Company Financials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>