force-app/main/default/objects/Company_Financial__c/fields/Employee_Salaries__c.field-meta.xml
<CustomField>
    <fullName>Employee_Salaries__c</fullName>
    <label>Employee Salaries</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>