force-app/main/default/objects/Company_Financial__c/fields/Forecast_Next_Month__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Next_Month__c</fullName>
    <label>Forecast Next Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>