force-app/main/default/objects/Company_Financial__c/fields/Operational_Costs__c.field-meta.xml
<CustomField>
    <fullName>Operational_Costs__c</fullName>
    <label>Operational Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>